spacing fix

--- a/src/pages/ServicesEvent/ServicesEvents.css
+++ b/src/pages/ServicesEvent/ServicesEvents.css
@@ -379,7 +379,8 @@
 .event-pricing-factors{
     display: flex;
     justify-content:center;
-    gap: 80px;
+    gap: 40px;
+    margin-top: 50px;
     flex-wrap: wrap;
 }
 .factor-icon{
@@ -535,6 +536,7 @@
     box-shadow: 0px 0px 0px rgba(0, 0, 0, 0.545) inset;
     transition: ease-in .15s;
     border: 1px solid var(--primary-color);
+    margin-bottom: 30px;
 }
 .event-form-btn:hover{
     box-shadow: 2px 1px 4px rgba(0, 0, 0, 0.545) ;
